# qt6_quick_testbed

./: CMakeLists.txt  CMakeUserPresets.json
FirstSample/: CMakeLists.txt  main.cpp  main.qml
_setup_file/: VSWorkspaceSettings.json  setup_vs.bat
cmake/: qt_util.cmake
src/: CMakeLists.txt
src/BasicTemplate/: CMakeLists.txt  main.cpp  main.qml
src/FirstSample/: AudioInfoBox.qml  CMakeLists.txt  main.cpp  main.qml
